--- a/madmin-app/public/index.html
+++ b/madmin-app/public/index.html
@@ -16,13 +16,15 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="path/to/materialize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
 
     <title>Madmin</title>
   </head>
   <body>
-    <script src="path/to/materialize.js"></script>
-    <script src="path/to/your/bundle.js"></script>
     <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
